--- a/twixer/templates/index.html
+++ b/twixer/templates/index.html
@@ -11,9 +11,29 @@
     <!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />-->
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='normalize.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
+    <header>
+        <img src="{{ url_for('static', filename='img/twitter_logo.png') }}" alt="Twitter logo"/>
+        <h1>Twixer</h1>
+        <p>Twixer es una herramienta de reconocimiento de genero para usuarios de Twitter.</p>
+        <p>Y lo mejor de todo: Functiona! ¿Quieres probar? Escribe el nombre de un usuario y dejame echar un vistazo.</p>
+    </header>
+    <div id="content">
+        <form action="/" method="post">
+            <input name="username" placeholder="Un usuario" autocomplete="off" required="true" autofocus="on">
+            <input type="submit" value="Adivinar">
+        </form>
+    </div>
+    <footer>
+        <p>Copyright 2015 - <a href="http://davidmogar.com">David Moreno-García</a>. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
