--- a/twixer/static/css/main.css
+++ b/twixer/static/css/main.css
@@ -33,27 +33,6 @@ header p {
     margin: 3em 10%;
 }
 
-#go-back {
-    background-color: #fff;
-    border-radius: 50%;
-    color: #8ec1da;
-    display: block;
-    font-size: 20px;
-    font-weight: bold;
-    height: 50px;
-    left: 10px;
-    line-height: 50px;
-    position: fixed;
-    text-align: center;
-    text-decoration: none;
-    top: 10px;
-    width: 50px;
-}
-
-#go-back:hover {
-    box-shadow: 0 2px 10px #fff;
-}
-
 a {
     color: #0084b4;
     text-decoration: none;
@@ -87,6 +66,24 @@ form input[type="submit"]:hover {
     background-color: #00759f;
 }
 
+a#go-back {
+    background-color: #0084b4;
+    border: 1px solid #99CDE1;
+    border-radius: 5px;
+    color: #fff;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.4em;
+    margin: 2em auto 0;
+    padding: 0.3em 0.8em;
+    text-decoration: none;
+    width: 6em;
+}
+
+a#go-back:hover {
+    background-color: #00759f;
+}
+
 .box {
     background-color: #fff;
     border: 1px solid #8ec1da;
@@ -108,6 +105,16 @@ form input[type="submit"]:hover {
 
 .emphasis {
     font-weight: bold;
+}
+
+.error {
+    background-color: #e45959;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1.2em;
+    margin: 0 auto 1em;
+    max-width: 300px;
+    padding: 1em;
 }
 
 .blue {
