--- a/twixer/templates/index.html
+++ b/twixer/templates/index.html
@@ -24,7 +24,7 @@
         <img src="{{ url_for('static', filename='img/twitter_logo.png') }}" alt="Twitter logo"/>
         <h1>Twixer</h1>
         <p>Twixer es una herramienta de reconocimiento de genero para usuarios de Twitter.</p>
-        <p>Y lo mejor de todo: Functiona! ¿Quieres probar? Escribe el nombre de un usuario y dejame echar un vistazo.</p>
+        <p>Y lo mejor de todo: Funciona! ¿Quieres probar? Escribe el nombre de un usuario y dejame echar un vistazo.</p>
     </header>
     <div id="content">
         {% if error %}
